<resources>
    <string name="app_name">OtusActivityLess</string>
    <string name="button">Пригласить друга</string>
    <string name="FilmName1">Схватка</string>
    <string name="FilmDesc1">Нил МакКоли - один из лучших преступников Лос-Анджелеса. Ему противостоит лучший детектив Винсент Ханна. Две сильнейшие команды сходятся друг против друга в смертельной схватке.</string>
    <string name="FilmName2">Охота</string>
    <string name="FilmName3">Проект X: Дорвались</string>
    <string name="FilmName4">Клуб «Завтрак»</string>
    <string name="FilmDesc2">Учитель живет одинокой жизнью, все время борется за опеку над сыном. Его жизнь постепенно становится лучше, когда он находит любовь и получает хорошие новости от сына, но его новая жизнь вот-вот будет жестоко разрушена невинной ложью.</string>
    <string name="FilmDesc3">Сюжет фильма рассказывает историю трех поначалу никому не известных старшеклассников, которые пытаются заявить о себе. Их задумка выглядит вполне невинно: надо просто организовать незабываемую вечеринку... но к такому они готовы не были.</string>
    <string name="FilmDesc4">Пятеро школьников в наказание за проступки вынуждены приехать в школу в выходной день и написать сочинение на тему «Кем вы себя представляете?» Молодым людям с большим трудом удается разобраться в своих проблемах.</string>
</resources>