<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/FilmImage4"
        android:layout_width="128dp"
        android:layout_height="180dp"
        android:layout_marginTop="336dp"
        android:src="@drawable/breakfast"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FilmDesc4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Детали"
        app:layout_constraintEnd_toEndOf="@+id/FilmName4"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="@+id/FilmName4"
        app:layout_constraintTop_toBottomOf="@+id/FilmName4" />

    <TextView
        android:id="@+id/FilmName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FilmName3"
        app:layout_constraintEnd_toEndOf="@+id/FilmImage3"
        app:layout_constraintStart_toStartOf="@+id/FilmImage3"
        app:layout_constraintTop_toBottomOf="@+id/FilmImage3" />

    <ImageView
        android:id="@+id/FilmImage3"
        android:layout_width="128dp"
        android:layout_height="180dp"
        android:layout_marginTop="336dp"
        android:src="@drawable/project_x"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/FilmName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FilmName4"
        app:layout_constraintEnd_toEndOf="@+id/FilmImage4"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="@+id/FilmImage4"
        app:layout_constraintTop_toBottomOf="@+id/FilmImage4" />

    <Button
        android:id="@+id/FilmDesc3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="Детали"
        app:layout_constraintEnd_toEndOf="@+id/FilmName3"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="@+id/FilmName3"
        app:layout_constraintTop_toBottomOf="@+id/FilmName3" />

    <!--            app:srcCompat="@android:drawable/ic_btn_speak_now"-->
    <!--        tools:srcCompat="@mipmap/ic_launcher" -->
    <!--    />-->

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.904"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/FilmImage1"
        android:layout_width="128dp"
        android:layout_height="180dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/heat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FilmDesc1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Детали"
        app:layout_constraintEnd_toEndOf="@+id/FilmName1"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="@+id/FilmName1"
        app:layout_constraintTop_toBottomOf="@+id/FilmName1" />

    <TextView
        android:id="@+id/FilmName1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FilmName1"
        app:layout_constraintEnd_toEndOf="@+id/FilmImage1"
        app:layout_constraintStart_toStartOf="@+id/FilmImage1"
        app:layout_constraintTop_toBottomOf="@+id/FilmImage1" />

    <ImageView
        android:id="@+id/FilmImage2"
        android:layout_width="128dp"
        android:layout_height="180dp"
        android:layout_marginTop="52dp"
        android:src="@drawable/ohota2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/FilmDesc2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Детали"
        app:layout_constraintEnd_toEndOf="@+id/FilmName2"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/FilmName2"
        app:layout_constraintTop_toBottomOf="@+id/FilmName2" />

    <TextView
        android:id="@+id/FilmName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/FilmName2"
        app:layout_constraintEnd_toEndOf="@+id/FilmImage2"
        app:layout_constraintHorizontal_bias="0.655"
        app:layout_constraintStart_toStartOf="@+id/FilmImage2"
        app:layout_constraintTop_toBottomOf="@+id/FilmImage2" />

</androidx.constraintlayout.widget.ConstraintLayout>